# BadApple-Of-BadApple

./: CMakeLists.txt  README.md
include/: BadApple.hpp  TerminalThreads.hpp  Threads.hpp  Utils.hpp
res/: .gitignore  rmAvi.sh
script/: cleanOutput.sh
src/: BadApple.cpp  Main.cpp  TerminalThreads.cpp  Threads.cpp  Utils.cpp
youtube/: Info.txt
yt/: Info.txt
